k8s/redirect-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redirect-service
  namespace: shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: redirect-service
  template:
    metadata:
      labels:
        app: redirect-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: redirect-service
          image: ghcr.io/rurek5000/shortener-redirect-service:latest
          ports:
            - containerPort: 3002
          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: redirect-service
  namespace: shortener
spec:
  selector:
    app: redirect-service
  ports:
    - port: 3002
      targetPort: 3002
