k8s/url-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: url-service
  namespace: shortener
spec:
  replicas: 2
  selector:
    matchLabels:
      app: url-service
  template:
    metadata:
      labels:
        app: url-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: url-service
          image: ghcr.io/rurek5000/shortener-url-service:latest
          ports:
            - containerPort: 3001
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: url-service
  namespace: shortener
spec:
  selector:
    app: url-service
  ports:
    - port: 3001
      targetPort: 3001
